// Vitest Snapshot v1

exports[`packShapesIntoGroups > it should be correct for a group with two children beside each other 1`] = `
{
  "1": {
    "childIds": [],
    "childIndex": 1,
    "children": [
      "2",
      "3",
    ],
    "contentSize": [
      100,
      100,
    ],
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      216,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
  "2": {
    "childIds": [],
    "childIndex": 2,
    "contentSize": [
      0,
      0,
    ],
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
  "3": {
    "childIds": [],
    "childIndex": 2,
    "contentSize": [
      0,
      0,
    ],
    "id": "3",
    "name": "3",
    "parentId": "canvas",
    "point": [
      0,
      232,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
}
`;

exports[`packShapesIntoGroups > it should group two shapes 1`] = `
{
  "1": {
    "childIds": [],
    "childIndex": 1,
    "contentSize": [
      0,
      0,
    ],
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
  "2": {
    "childIds": [],
    "childIndex": 2,
    "contentSize": [
      0,
      0,
    ],
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
}
`;

exports[`packShapesIntoGroups > it should work long and wide children 1`] = `
{
  "Components": {
    "childIndex": 0,
    "children": [
      "Components-Button",
      "Components-Text",
    ],
    "contentSize": [
      148.421875,
      70,
    ],
    "hasBeenMeasured": true,
    "id": "Components",
    "name": "Components",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      633.4921875,
      1059,
    ],
    "stories": [],
    "type": "group",
  },
  "Components-Button": {
    "childIndex": 0,
    "children": [
      "Components-Button-Button",
    ],
    "contentSize": [
      89.7265625,
      70,
    ],
    "hasBeenMeasured": true,
    "id": "Components-Button",
    "name": "Components-Button",
    "parentId": "canvas",
    "point": [
      366.015625,
      86,
    ],
    "rotation": 0,
    "size": [
      267.4765625,
      516,
    ],
    "stories": [],
    "type": "group",
  },
  "Components-Button-Button": {
    "childIndex": 0,
    "children": [],
    "contentSize": [
      267.4765625,
      516,
    ],
    "hasBeenMeasured": true,
    "id": "Components-Button-Button",
    "name": "Components-Button-Button",
    "parentId": "canvas",
    "point": [
      0,
      86,
    ],
    "rotation": 0,
    "size": [
      267.4765625,
      516,
    ],
    "stories": [
      "components-button-button--playground",
      "components-button-button--with-disabled",
      "components-button-button--with-style",
      "components-button-button--without-style",
    ],
    "type": "group",
  },
  "Components-Text": {
    "childIndex": 1,
    "children": [],
    "contentSize": [
      350.015625,
      1059,
    ],
    "hasBeenMeasured": true,
    "id": "Components-Text",
    "name": "Components-Text",
    "parentId": "canvas",
    "point": [
      0,
      86,
    ],
    "rotation": 0,
    "size": [
      350.015625,
      1059,
    ],
    "stories": [
      "components-text--headings",
      "components-text--unordered-list",
      "components-text--ordered-list",
      "components-text--anchor",
    ],
    "type": "group",
  },
}
`;

exports[`packShapesIntoGroups > it should work with 2 groups of 2 levels of nesting 1`] = `
{
  "1": {
    "childIds": [],
    "childIndex": 1,
    "children": [
      "2",
      "4",
    ],
    "contentSize": [
      100,
      100,
    ],
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      216,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
  "2": {
    "childIds": [],
    "childIndex": 2,
    "children": [
      "3",
    ],
    "contentSize": [
      100,
      100,
    ],
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
  "3": {
    "childIds": [],
    "childIndex": 3,
    "contentSize": [
      0,
      0,
    ],
    "id": "3",
    "name": "3",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
  "4": {
    "childIds": [],
    "childIndex": 4,
    "children": [
      "5",
    ],
    "contentSize": [
      100,
      100,
    ],
    "id": "4",
    "name": "4",
    "parentId": "canvas",
    "point": [
      0,
      232,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
  "5": {
    "childIds": [],
    "childIndex": 5,
    "contentSize": [
      0,
      0,
    ],
    "id": "5",
    "name": "5",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
}
`;

exports[`packShapesIntoGroups > it should work with 2 levels of nesting 1`] = `
{
  "1": {
    "childIds": [],
    "childIndex": 1,
    "children": [
      "2",
    ],
    "contentSize": [
      100,
      100,
    ],
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
  "2": {
    "childIds": [],
    "childIndex": 2,
    "children": [
      "3",
    ],
    "contentSize": [
      100,
      100,
    ],
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
  "3": {
    "childIds": [],
    "childIndex": 2,
    "contentSize": [
      0,
      0,
    ],
    "id": "3",
    "name": "3",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
}
`;

exports[`packShapesIntoGroups > it should wrap single item in nested group 1`] = `
{
  "1": {
    "childIds": [],
    "childIndex": 1,
    "children": [
      "2",
    ],
    "contentSize": [
      0,
      0,
    ],
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
  "2": {
    "childIds": [],
    "childIndex": 2,
    "contentSize": [
      0,
      0,
    ],
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      16,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
}
`;

exports[`packShapesIntoGroups > it should wrap single item in nested group with content size 1`] = `
{
  "1": {
    "childIds": [],
    "childIndex": 1,
    "children": [
      "2",
    ],
    "contentSize": [
      100,
      100,
    ],
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
  "2": {
    "childIds": [],
    "childIndex": 2,
    "contentSize": [
      0,
      0,
    ],
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
    "visibility": "hidden",
  },
}
`;
